# rdk-desktop-robot

./: .gitignore  README.md  sdkconfig
components/display/: CMakeLists.txt  display_service.c
components/emotion/: emotion_engine.c
components/emotion/include/: emotion_engine.h
components/robot_link/: CMakeLists.txt  robot_link.c
docs/: ARCHITECTURE.md  HANDOFF.md  JOINT_DEBUG.md
rdk/: DEPLOY.md  IR_WAKE_DEPLOY.md  README.md  camera.py  face_tracker.py  install_ir_wake_service.sh  install_service.sh  ir_wake_bridge.py  ir_wake_config.json  servo_control.py  stop_servo.sh  tracker_config.json
